--- a/header.css
+++ b/header.css
@@ -1,10 +1,55 @@
-.cabeçalho__menu-hamburguer{ 
+.cabeçalho_menu-hamburguer {
     width: 24px;
     height: 24px;
     background-image: url("../img/Menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
     display: inline-block;
 }
 
 .cabeçalho {
     background-color: var(--branco);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+.conteiner {
+    display: flex;
+    align-items: center;
+}
+
+.conteiner__imagem {
+    padding: 1em;
+}
+.lista-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    width: 60vw;
+}
+
+.container__botao:checked~.lista-menu {
+    display: block;
+}
+.lista-menu__titulo,
+.lista-menu__item {
+    padding: 1em;
+    background-color: var(--branco);
+}
+.lista-menu__titulo {
+    color: var(--laranja);
+    font-weight: 700;
+}
+.lista-menu__link {
+    background:var(--azul-degrade) #002f52;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #002f52;
+    background-clip: text;
+    text-transform: uppercase;
+}
+
+
+.conteiner__botao {
+    display: none;
 }
